; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_variable.c_mrb_gc_free_iv.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_variable.c_mrb_gc_free_iv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RObject = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mrb_gc_free_iv(i32* %0, %struct.RObject* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.RObject*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.RObject* %1, %struct.RObject** %4, align 8
  %5 = load %struct.RObject*, %struct.RObject** %4, align 8
  %6 = getelementptr inbounds %struct.RObject, %struct.RObject* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  %11 = load %struct.RObject*, %struct.RObject** %4, align 8
  %12 = getelementptr inbounds %struct.RObject, %struct.RObject* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @iv_free(i32* %10, i64 %13)
  br label %15

15:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @iv_free(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
